update spring versions

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.9.RELEASE</version>
+		<version>2.3.8.RELEASE</version>
 	</parent>
 
 	<groupId>org.springframework.samples</groupId>
@@ -28,8 +28,9 @@
 
     <properties>
         <assertj.version>3.9.0</assertj.version>
-        <spring-cloud.version>Edgware.SR6</spring-cloud.version>
-        <sleuth.version>1.3.1.RELEASE</sleuth.version>
+<!--        <spring-cloud.version>Edgware.SR6</spring-cloud.version>-->
+        <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
+        <sleuth.version>2.2.7.RELEASE</sleuth.version>
         <java.version>1.8</java.version>
 
 		<docker.image.prefix>mszarlinski</docker.image.prefix>
@@ -40,13 +41,13 @@
 
 	<dependencyManagement>
 		<dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-sleuth-dependencies</artifactId>
-				<type>pom</type>
-				<scope>import</scope>
-                <version>${sleuth.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-sleuth-dependencies</artifactId>-->
+<!--				<type>pom</type>-->
+<!--				<scope>import</scope>-->
+<!--                <version>${sleuth.version}</version>-->
+<!--            </dependency>-->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
