--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,9 @@
 <!--        <spring-cloud.version>Edgware.SR6</spring-cloud.version>-->
         <spring-cloud.version>Hoxton.SR10</spring-cloud.version>
         <sleuth.version>2.2.7.RELEASE</sleuth.version>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
 		<docker.image.prefix>mszarlinski</docker.image.prefix>
         <docker.image.exposed.port>9090</docker.image.exposed.port>
