--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   config-server:
-    image: mszarlinski/spring-petclinic-config-server
+    image: bryannoland/spring-petclinic-config-server
     container_name: config-server
     ports:
      - 8888:8888
@@ -9,7 +9,7 @@ services:
 
 
   discovery-server:
-    image: mszarlinski/spring-petclinic-discovery-server
+    image: bryannoland/spring-petclinic-discovery-server
     container_name: discovery-server
     links:
      - config-server
@@ -20,12 +20,12 @@ services:
      - 8761:8761
 
   customers-service:
-    image: mszarlinski/spring-petclinic-customers-service
+    image: bryannoland/spring-petclinic-customers-service
     container_name: customers-service
     links:
      - config-server
      - discovery-server
-     - tracing-server
+#     - tracing-server
     depends_on:
      - config-server
      - discovery-server
@@ -34,12 +34,12 @@ services:
     - 8081:8081
 
   visits-service:
-    image: mszarlinski/spring-petclinic-visits-service
+    image: bryannoland/spring-petclinic-visits-service
     container_name: visits-service
     links:
      - config-server
      - discovery-server
-     - tracing-server
+#     - tracing-server
     depends_on:
      - config-server
      - discovery-server
@@ -48,12 +48,12 @@ services:
      - 8082:8082
 
   vets-service:
-    image: mszarlinski/spring-petclinic-vets-service
+    image: bryannoland/spring-petclinic-vets-service
     container_name: vets-service
     links:
      - config-server
      - discovery-server
-     - tracing-server
+#     - tracing-server
     depends_on:
      - config-server
      - discovery-server
@@ -62,7 +62,7 @@ services:
      - 8083:8083
 
   api-gateway:
-    image: mszarlinski/spring-petclinic-api-gateway
+    image: bryannoland/spring-petclinic-api-gateway
     container_name: api-gateway
     links:
      - config-server
@@ -70,7 +70,7 @@ services:
      - customers-service
      - visits-service
      - vets-service
-     - tracing-server
+#     - tracing-server
     depends_on:
      - config-server
      - discovery-server
@@ -78,28 +78,28 @@ services:
     ports:
      - 8080:8080
 
-  tracing-server:
-    image: mszarlinski/spring-petclinic-tracing-server
-    container_name: tracing-server
-    links:
-     - config-server
-     - discovery-server
-    depends_on:
-     - config-server
-     - discovery-server
-    entrypoint: ["./wait-for-it.sh","discovery-server:8761","--timeout=60","--","java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
-    ports:
-     - 9411:9411
+#  tracing-server:
+#    image: bryannoland/spring-petclinic-tracing-server
+#    container_name: tracing-server
+#    links:
+#     - config-server
+#     - discovery-server
+#    depends_on:
+#     - config-server
+#     - discovery-server
+#    entrypoint: ["./wait-for-it.sh","discovery-server:8761","--timeout=60","--","java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+#    ports:
+#     - 9411:9411
 
-  admin-server:
-    image: mszarlinski/spring-petclinic-admin-server
-    container_name: admin-server
-    links:
-     - config-server
-     - discovery-server
-    depends_on:
-     - config-server
-     - discovery-server
-    entrypoint: ["./wait-for-it.sh","discovery-server:8761","--timeout=60","--","java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
-    ports:
-     - 9090:9090
+#  admin-server:
+#    image: bryannoland/spring-petclinic-admin-server
+#    container_name: admin-server
+#    links:
+#     - config-server
+#     - discovery-server
+#    depends_on:
+#     - config-server
+#     - discovery-server
+#    entrypoint: ["./wait-for-it.sh","discovery-server:8761","--timeout=60","--","java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+#    ports:
+#     - 9090:9090
