--- a/spring-petclinic-tracing-server/src/main/resources/bootstrap.yml
+++ b/spring-petclinic-tracing-server/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
-      label: 1e9c6759a423e3984c6d73d002c0fd2ebf5abeb5
+            label: poc
   application:
     name: tracing-server
 ---
